hphp/hack/test/typecheck/aktuple/list_error.php.exp
File "list_error.php", line 9, characters 15-18:
Invalid argument (Typing[4110])
File "list_error.php", line 12, characters 22-27:
This is a string
File "list_error.php", line 6, characters 14-14:
It is incompatible with an int
